# SteamGeneratorDesign

./: LICENSE  README.md  蒸汽发生器.dwg
code/: CMakeLists.txt  main.cpp
code/include/: CalculationOfAccelerationResistanceOfSecondaryCircuitWaterRisingSpace.h  CalculationOfFrictionalResistanceInUTube.h  CalculationOfLocalResistanceOfPrimaryCircuitWater.h  CalculationOfResistanceOfFlowDistributionOrificeInSecondaryWaterRisingSpace.h  CalculationOfResistanceOfSecondaryCircuitWaterVaporSeparator.h  CalculationOfTheFrictionalResistanceOfTheSecondaryCircuitWaterRisingSpace.h  CalculationOfTheLocalResistanceOfTheSecondaryCircuitWaterRisingSpace.h  CalculationOfTheResistanceOfTheWaterBendInTheSecondaryCircuitWaterRiseSpace.h  CalculationOfTheSpaceResistanceOfTheSecondaryCircuitWaterDrop.h  CalculationOfTheTotalResistanceOfTheSecondaryCircuitWaterRisingSpace.h  CalculationOfTotalResistanceOfPrimaryCircuitWater.h  CalculationOfTotalResistanceOfSecondaryCircuitWaterCirculation.h  GivenCondition.h  HeatTransferCalculation.h  HeatTransferTube.h  LowerCylinder.h  MainPipeInnerDiameter.h  MotionHeadCalculation.h  PreheatingSectionHeightCalculation.h  SphericalBottomHead.h  TubeBundleStructure.h  UpperCylinder.h
code/src/: CalculationOfAccelerationResistanceOfSecondaryCircuitWaterRisingSpace.cpp  CalculationOfFrictionalResistanceInUTube.cpp  CalculationOfLocalResistanceOfPrimaryCircuitWater.cpp  CalculationOfResistanceOfFlowDistributionOrificeInSecondaryWaterRisingSpace.cpp  CalculationOfResistanceOfSecondaryCircuitWaterVaporSeparator.cpp  GivenCondition.cpp  HeatTransferCalculation.cpp  (+17 more)
(+19 files in other folders)
